# devbox

./: .clippy.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.build.dockerignore  Makefile  README.md  deny.toml  docker-bake.hcl
.claude/: settings.json
.claude/rules/: branching.md  commits-and-issues.md  continuous-improvement.md
.devbox/: warm.sh
.github/workflows/: ci.yml  deploy.yml  release.yml  secure_workflows.yml
.kiro/: references.md
.kiro/specs/: devbox-api.md  devbox-pool-manager.md  ec2-integration.md
.kiro/specs/ami-image-builder/: .config.kiro  requirements.md
.kiro/specs/asg-pool-management/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/devbox-agent/: design.md  requirements.md
.kiro/specs/devbox-server-ui-cli/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
.kiro/specs/infra-boundary/: design.md  requirements.md  tasks.md
.kiro/specs/pool-reconciliation/: design.md  requirements.md  tasks.md
.kiro/specs/ssh-access/: design.md  requirements.md
.kiro/steering/: build-and-test.md  code-conventions.md  dependencies.md  file-locations.md  project-overview.md  security.md
crates/devbox-agent/: Cargo.toml  README.md
crates/devbox-agent/src/: checkout.rs  control_plane.rs  doctor.rs  freshen.rs  git.rs  git_credential.rs  github_token.rs  imds.rs  main.rs  owner_sync.rs  principals.rs  server_client.rs  session.rs  session_restore.rs  session_watch.rs  warmup.rs
crates/devbox-cli/: Cargo.toml  README.md
crates/devbox-cli/src/: auth.rs  aws_profile.rs  command.rs  format.rs  main.rs  session.rs  ssh.rs  ssm.rs  state.rs  token.rs
crates/devbox-cli/src/ssm/: channel.rs  message.rs
crates/devbox-common/: Cargo.toml  README.md
crates/devbox-common/src/: lib.rs
crates/devbox-server/: Cargo.toml  README.md  tailwind.config.js
crates/devbox-server/migrations/postgres/: 001_create_documents.sql  002_create_document_indexes.sql  002_idx_documents_doc_type.sql  003_idx_documents_expires_at.sql  004_idx_documents_doc_type_created.sql  005_create_document_indexes.sql  006_idx_document_indexes_lookup.sql  007_idx_document_indexes_document_id.sql
crates/devbox-server/migrations/sqlite/: 001_initial.sql
crates/devbox-server/src/: convert.rs  egress.rs  error.rs  lib.rs  main.rs  naming.rs  reconcile.rs  routes.rs  service.rs  sessions.rs  ui.rs
crates/devbox-server/src/auth/: agent_identity.rs  discovery.rs  jwt.rs  mod.rs
crates/devbox-server/src/compute/: ec2.rs  mock.rs  mod.rs
crates/devbox-server/src/db/: document_type.rs  dsql.rs  migrations.rs  mod.rs  pool.rs  store.rs  tests.rs
crates/devbox-server/src/documents/: devbox.rs  leader_lock.rs  mod.rs  name_claim.rs  session.rs
crates/devbox-server/src/ec2/: mock.rs  mod.rs  real.rs
crates/devbox-server/src/github/: app.rs  git_proxy.rs  minter.rs  mod.rs
crates/devbox-server/src/reconcile/: config.rs  lock.rs  mod.rs  tests.rs  tick.rs
crates/devbox-server/static/: style.css
crates/devbox-server/styles/: input.css
crates/devbox-server/templates/: claim_form.html  detail.html  error.html  index.html  signed_out.html
