[package]
name = "devbox-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "On-host devbox agent: SSH principal resolution, account provisioning, and warm-up"

[lints]
workspace = true

[[bin]]
name = "devbox-agent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
aws-config = { workspace = true, features = ["rt-tokio", "default-https-client", "behavior-version-latest"] }
aws-lc-rs = { workspace = true }
aws-sdk-ec2 = { workspace = true, features = ["rt-tokio", "default-https-client", "behavior-version-latest"] }
clap = { workspace = true, features = ["std", "derive"] }
tokio = { workspace = true, features = ["rt", "macros", "net", "time", "io-util"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["std", "fmt"] }
