[package]
name = "devbox-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "On-host devbox agent: SSH principal resolution, account provisioning, and warm-up"

[lints]
workspace = true

[[bin]]
name = "devbox-agent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
aws-config = { workspace = true, features = ["rt-tokio", "default-https-client", "behavior-version-latest"] }
aws-lc-rs = { workspace = true }
aws-sdk-ec2 = { workspace = true, features = ["rt-tokio", "default-https-client", "behavior-version-latest"] }
aws-sdk-sts = { workspace = true, features = ["rt-tokio", "default-https-client", "behavior-version-latest"] }
clap = { workspace = true, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
devbox-common = { path = "../devbox-common" }
reqwest = { workspace = true, features = ["json", "rustls", "stream"] }
rustls = { workspace = true, features = ["aws_lc_rs", "std", "tls12"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "macros", "net", "time", "io-util", "process", "fs"] }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["std", "fmt"] }
