[package]
name = "devbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "CLI client for the devbox orchestration service"

[lints]
workspace = true

[[bin]]
name = "devbox"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["std", "help", "usage", "error-context", "suggestions", "derive", "env"] }
devbox-common = { path = "../devbox-common" }
dialoguer = { workspace = true }
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"] }
reqwest = { workspace = true, features = ["json", "form", "rustls"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
# In-process mock HTTP server for auth.rs poll-loop tests (axum already in workspace).
axum = { workspace = true, features = ["http1", "json", "tokio"] }
