[package]
name = "devbox-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared types for the devbox orchestration service"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
jiff = { workspace = true, features = ["std", "serde"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
uuid = { workspace = true, features = ["v7", "serde", "std"] }
