[package]
name = "devbox-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Devbox orchestration API server"

[lints]
workspace = true

[features]
default = []
test-utils = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "devbox-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
askama = { workspace = true, features = ["derive", "alloc"] }
aws-config = { workspace = true, features = ["rt-tokio", "default-https-client", "behavior-version-latest"] }
aws-lc-rs = { workspace = true }
aws-sdk-autoscaling = { workspace = true, features = ["rt-tokio", "default-https-client", "behavior-version-latest"] }
aws-sdk-dsql = { workspace = true, features = ["rt-tokio", "default-https-client", "behavior-version-latest"] }
aws-sdk-ec2 = { workspace = true, features = ["rt-tokio", "default-https-client", "behavior-version-latest"] }
axum = { workspace = true, features = ["json", "tokio", "http1", "form", "query"] }
base64 = { workspace = true }
devbox-common = { path = "../devbox-common" }
jiff = { workspace = true, features = ["std", "serde"] }
jsonwebtoken = { workspace = true, features = ["aws_lc_rs", "use_pem"] }
reqwest = { workspace = true, features = ["json", "rustls"] }
rust-embed = { workspace = true, features = ["axum-ex", "mime-guess"] }
sea-query = { workspace = true, features = ["backend-sqlite", "backend-postgres", "derive"] }
sea-query-sqlx = { workspace = true, features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio"] }
secrecy = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = ["runtime-tokio", "migrate", "derive", "macros", "sqlite", "postgres", "tls-rustls-aws-lc-rs"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["std", "fmt", "env-filter"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v7", "serde", "std"] }


[dev-dependencies]
proptest = { workspace = true, features = ["std"] }
tower = { workspace = true, features = ["util"] }
